--- a/www/source/stylesheets/_home.scss
+++ b/www/source/stylesheets/_home.scss
@@ -74,11 +74,6 @@ hr {
   @media (max-width: rem-calc(400)) {
     margin-bottom: 112%;
 
-    .button {
-      padding-left: rem-calc(24);
-      padding-right: rem-calc(24);
-    }
-
     .button + .button {
       margin-left: rem-calc(10);
     }
@@ -167,7 +162,7 @@ $sub-hero-skew: 5deg;
 .sub-hero {
   position: relative;
   z-index: 2;
-  padding: rem-calc(160) 0 rem-calc(120);
+  padding: rem-calc(120) 0 rem-calc(120);
   margin-top: rem-calc(-100);
   background-image: linear-gradient(240deg, $hab-blue-grey, darken($hab-blue-grey, 5%));
   color: $white;
@@ -206,8 +201,12 @@ $sub-hero-skew: 5deg;
 }
 
 .sub-hero--heading {
-  margin-bottom: rem-calc(60);
+  margin: rem-calc(90) 5% rem-calc(60);
   @extend %section-heading;
+
+  @include breakpoint(medium) {
+    margin: 0 auto rem-calc(60);
+  }
 }
 
 .sub-hero--icon {
@@ -251,7 +250,8 @@ $sub-hero-skew: 5deg;
   margin: rem-calc(40) 0 rem-calc(-35);
 
   @include small-home {
-    margin: rem-calc(20) 0 0 6%;
+    margin: rem-calc(20) 0 0 5%;
+    max-width: rem-calc(240);
   }
 }
 
@@ -269,7 +269,7 @@ $sub-hero-skew: 5deg;
   }
 
   &.last {
-    padding-bottom: rem-calc(90);
+    padding: 0 5% rem-calc(60);
   }
 
   h2 {
@@ -277,12 +277,13 @@ $sub-hero-skew: 5deg;
   }
 
   @include small-home {
-    padding: rem-calc(60) 0;
+    padding: 0;
 
     &.first {
       margin-top: rem-calc(-17);
       background-position: center rem-calc(-50);
       background-size: rem-calc(410) auto;
+      padding-top: rem-calc(120);
     }
   }
 }
@@ -370,7 +371,7 @@ $sub-hero-skew: 5deg;
 
 // In Production Section
 .production-wrap {
-  padding: rem-calc(30) 5%;
+  padding: 0 5%;
 
   @include breakpoint(medium) {
     background-image: url('/images/graphics/main-section-last-watermark.svg');
@@ -392,6 +393,10 @@ $sub-hero-skew: 5deg;
 
   p {
     color: $hab-gray;
+  }
+
+  &.last-item {
+    margin-bottom: 0;
   }
 }
 .production--icon {
@@ -417,7 +422,7 @@ $testimonials-slider-transition: 1s;
 .testimonial {
   position: absolute;
   width: 100%;
-  margin-bottom: rem-calc(42);
+  margin-bottom: rem-calc(30);
   opacity: 0;
   transition: opacity $testimonials-slider-transition ease;
 
@@ -446,7 +451,7 @@ $testimonials-slider-transition: 1s;
   }
 
   @include breakpoint(medium) {
-    width: 35%;
+    width: 37.2%;
     margin-right: 1%;
     padding-bottom: 15%;
 
@@ -460,18 +465,19 @@ $testimonials-slider-transition: 1s;
 
 .testimonial--blurb {
   @include breakpoint(medium) {
-    width: 63%;
+    width: 60.8%;
   }
 }
 
 .testimonial--blurb--text {
-  margin-bottom: rem-calc(10);
+  margin-bottom: rem-calc(20);
   font-style: italic;
   font-size: rem-calc(18);
 }
 
 .testimonial--blurb--attr {
-  margin-bottom: 0;
+  display: block;
+  margin-bottom: rem-calc(20);
   font-size: rem-calc(13);
   font-family: $header-font-family;
 }
