--- a/www/source/stylesheets/_mixins.scss
+++ b/www/source/stylesheets/_mixins.scss
@@ -17,7 +17,7 @@
   color: $body-font-color;
   font-size: rem-calc(16);
   letter-spacing: rem-calc(1);
-  padding: 0.85em 1.65em;
+  padding: rem-calc(15) rem-calc(20);
   transition: all .2s;
 
   &:hover {
